--- a/difficulty-selection.html
+++ b/difficulty-selection.html
@@ -24,7 +24,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"
             integrity="sha384-cwS6YdhLI7XS60eoDiC+egV0qHp8zI+Cms46R0nbn8JrmoAzV9uFL60etMZhAnSu"
             crossorigin="anonymous"
-            referrerpolicy="no-referrer"></script>
+            referrerpolicy="no-referrer">
+    </script>
 
     <!-- P1 FIX: Core Scripts in correct order -->
     <script defer src="/assets/js/GameState.js"></script>
